/**
 * 清洁参数 Request 和 Response 协议；
 */
syntax = "proto3";

// option optimize_for = LITE_RUNTIME;

package proto.cloud;
import "proto/cloud/common.proto";

message Fan {
    enum Suction {    // 风机吸力
        QUIET = 0;
        STANDARD = 1;
        TURBO = 2;
        MAX = 3;
        MAX_PLUS = 4;
    }
    Suction suction = 1;
}

message MopMode {
    enum Level {      // 拖地档位
        LOW = 0;
        MIDDLE = 1;
        HIGH = 2;
    }
    Level level = 1;

    enum CornerClean {
        NORMAL = 0;  // 普通
        DEEP = 1;    // 扭屁股动作
    }
    CornerClean corner_clean = 2;
}

message CleanCarpet {
    enum Strategy {
        AUTO_RAISE = 0;   // 遇地毯自动抬升
        AVOID = 1;        // 规避地毯
        IGNORE = 2;       // 忽略(无视)地毯
    }
    Strategy strategy = 1; // 遇地毯策略
}

message CleanType {
    enum Value {
        SWEEP_ONLY = 0;
        MOP_ONLY = 1;
        SWEEP_AND_MOP = 2;
        SWEEP_THEN_MOP = 3;  // 先扫后拖
    }
    Value value = 1;
}

message CleanExtent {    // 清洁程度
    enum Value {  // 注意和 app 上的显示顺序不一样
        NORMAL = 0;  // 普通
        NARROW = 1;  // 精(窄)扫/拖
        QUICK = 2;   // 快速清理（只弓扫/拖，不沿边）
    }
    Value value = 1;
}

message CleanTimes {
    uint32 auto_clean = 1;
    uint32 select_rooms = 2;
    // id 3 已不再使用
    uint32 spot_clean = 4;
}

// 吸力档位 Fan 来自单独的 dp，不放在 CleanParam
message CleanParam {
    CleanType clean_type = 1;
    CleanCarpet clean_carpet = 2;
    CleanExtent clean_extent = 3;
    MopMode mop_mode = 4;
    Switch smart_mode_sw = 5; // 智能省心模式开关
    Fan fan = 6;  // 从 x10 项目开始使用这里的风机档位，旧项目使用单独 dp
    uint32 clean_times = 7; // 清扫次数，非 0 有效
}

message CleanParamRequest {
    CleanParam clean_param = 1;
    CleanParam area_clean_param = 2;
}

// 清洁参数，需要保存
message CleanParamResponse {
    CleanParam clean_param = 1;
    CleanTimes clean_times = 2;  // 总清扫次数. x10 项目后废弃
    CleanParam area_clean_param = 3;
    CleanParam running_clean_param = 4; // 执行过程中使用的清洁参数（状态）
}
