/**
 * 基站 Request 和 Response 协议；
 */
syntax = "proto3";
// option optimize_for = LITE_RUNTIME;
package proto.cloud;

import "proto/cloud/common.proto";

message Duration {   // 时长档位分级
    enum Level {
        SHORT = 0;
        MEDIUM = 1;
        LONG = 2;
    }
    Level level = 1;
}

message CollectDustCfg {    // 集尘配置
    enum Cfg {
       CLOSE = 0; // 关闭
       ONCE = 1; // 清扫1次就集尘
       TWICE = 2; // 清扫2次才集尘
    }
    Cfg cfg = 1;
}

message CollectDustCfgV2 {    // 集尘配置新版协议
    Switch sw = 1;

    message Mode {
        enum Value {
            BY_TASK = 0;  // 按次数
            BY_TIME = 1;  // 按时间
        }
        Value value = 1;

        uint32 task = 2;  // 任务次数
        uint32 time = 3;  // 清洁时间，单位分钟
    }
    Mode mode = 2;
}

message DryCfg {    // 烘干配置
    enum Cfg {
       CLOSE = 0;    // 关闭
       STANDARD = 1; // 标准
       QUICK = 2;    // 快速
    }
    Cfg cfg = 1;
    Duration duration = 2;
}

message WashCfg {   // 洗拖布配置
    message BackwashFreq {
        enum Mode {
            ByPartition = 0;    // 按分区
            ByTime = 1;         // 按时间
            ByArea = 2;         // 按面积
        }
        Mode mode = 1;
        // 按档位需要传下面的值（档位表示不同时长或者不同面积）
        Duration duration = 2;
        // 按数值需要传下面的值（表示不同时长或者不同面积）
        Numerical time_or_area = 3;  // 时长单位分钟，面积单位平方米
    }
    BackwashFreq wash_freq = 1;  // 回洗拖布的频率
    Duration wash_duration = 2;  // 清洗拖布的时长

    // 自动洗拖布开关
    enum Cfg {
        CLOSE = 0;    // 关闭
        STANDARD = 1; // 标准
    }
    Cfg cfg = 3;
}

message CutHairCfg {    // 割毛发配置
    Switch sw = 1;
}

message SelfPurifyingCfg {  // [废弃] 手动自净（集尘、滚刷清洁组合项）
    enum Type {
        STANDARD = 0;       // 标准
        STRONG = 1;         // 强效
        ENERGY_SAVING = 2;  // 节能
        CUSTOM = 3;         // 自定义
    }
    Type type = 1;

    message Config {
        message Frequency {
            enum Mode {
                BY_TASK = 0;  // 按次数
                BY_TIME = 1;  // 按时间
            }
            Mode mode = 1;

            uint32 task = 2;  // 任务次数
            uint32 time = 3;  // 清洁时间，单位分钟
        }
        Frequency frequency = 1;

        message Intensity {
            enum Level {
                LOW = 0;
                MEDIUM = 1;
                HIGH = 2;
            }
            Level level = 1;
        }
        Intensity intensity = 2;
    }

    // 设备始终上报所有的配置
    // app 选择自定义时，需要下发 custom_cfg
    Config standard_cfg = 2;
    Config strong_cfg = 3;
    Config energy_saving_cfg = 4;
    Config custom_cfg = 5;
}

message AutoActionCfg {    // 扫拖过程自动进行的行为开关
    WashCfg wash = 1;               //洗拖布
    DryCfg dry = 2;                 // 烘干
    CollectDustCfg collectdust = 3; // 集尘
    bool detergent = 4;             // 添加清洁剂
    bool make_disinfectant = 5;     // 自动制备消毒剂
    CollectDustCfgV2 collectdust_v2 = 6;    // 集尘新版协议
    CutHairCfg cut_hair = 7;                // 割毛发
    SelfPurifyingCfg self_purifying = 8;    // [废弃] 手动自净（集尘、滚刷清洁组合项）
}

message ManualActionCmd {
    oneof Cmd {
        bool self_maintain = 1;    // 按照设置完成返回基站后的自动维护操作（加污排污/集尘/洗拖把/烘干），即深度自清洁
        bool go_dry = 2;           // 手动烘干开关
        bool go_collect_dust = 3;  // 手动集尘
        bool go_selfcleaning = 4;  // 手动洗拖把
        bool go_remove_scale = 5;  // 手动除水垢
        bool go_cut_hair = 6;      // 手动割毛发
        bool go_selfpurifying = 7; // [废弃] 手动自净（集尘、滚刷清洁组合项）
    }
}

// 拖地模式下：
// 回到基站自动触发清洗拖布；
// 需要设置自动烘干拖布，才能烘干拖布；
message StationRequest {
    AutoActionCfg auto_cfg = 1;
    ManualActionCmd manual_cmd = 2;
}

message StationResponse {
    AutoActionCfg auto_cfg_status = 1;

    message StationStatus {
        bool connected = 1;		//基站是否已连接

        // 基站工作状态
        enum State {
            IDLE = 0;           // 空闲
            WASHING = 1;        // 清洗拖布
            DRYING = 2;         // 烘干拖布
            REMOVING_SCALE = 3; // 除水垢
        }
        State state = 2;

        // 各模块的状态
        bool collecting_dust = 3;        // 集尘中
        bool clear_water_adding = 4;     // 清水添加中
        bool waste_water_recycling = 5;  // 污水回收中
        bool disinfectant_making = 6;    // 消毒剂制备中
        bool cutting_hair = 7;           // 割毛发
    }
    StationStatus status = 2;

    enum WaterLevel {
        EMPTY = 0;
        VERY_LOW = 1;   // <25%
        LOW = 2;        // 25% < low < 50%
        MEDIUM = 3;     // 50% < medium < 75%
        HIGH = 4;       // >75%
    }
    WaterLevel clean_level = 3;  // 干净水量
    WaterLevel dirty_level = 4;  // 污水水量

    Numerical clean_water = 5;   // 干净水量，0%~100%
}
